--- a/style/Style.css
+++ b/style/Style.css
@@ -1,3 +1,12 @@
+html {
+  font-size: 16px; }
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+div {
+  border: 1px solid cadetblue; }
 
 /*# sourceMappingURL=Style.css.map */
