--- a/style/Style.css
+++ b/style/Style.css
@@ -1,12 +1,64 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Source+Serif+Pro&display=swap");
 html {
   font-size: 16px; }
 
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  max-width: 1440px;
+  font-family: 'Roboto', sans-serif; }
+  body ul, body li {
+    list-style: none; }
 
 div {
   border: 1px solid cadetblue; }
+
+.header .headerWrap {
+  width: 83.3%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 4.3rem;
+  grid-template-columns: 2fr 1fr 3fr;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center; }
+  .header .headerWrap .logo {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    width: 7rem;
+    height: 1.8rem;
+    background-image: url("../img/Logo_header.svg");
+    background-size: contain; }
+  .header .headerWrap .empty {
+    grid-row: 1/2;
+    grid-column: 2/3; }
+  .header .headerWrap .navigation {
+    grid-row: 1/2;
+    grid-column: 3/4; }
+    .header .headerWrap .navigation .navigation__ul {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.4fr;
+      grid-template-rows: 1fr;
+      justify-content: space-around; }
+      .header .headerWrap .navigation .navigation__ul .navigation__presets {
+        grid-column: 1/2;
+        grid-row: 1/2; }
+      .header .headerWrap .navigation .navigation__ul .navigation__prints {
+        grid-column: 2/3;
+        grid-row: 1/2; }
+      .header .headerWrap .navigation .navigation__ul .navigation__store {
+        grid-column: 3/4;
+        grid-row: 1/2; }
+      .header .headerWrap .navigation .navigation__ul .navigation__about {
+        grid-column: 4/5;
+        grid-row: 1/2; }
+      .header .headerWrap .navigation .navigation__ul .navigation__contact {
+        grid-column: 5/6;
+        grid-row: 1/2; }
+      .header .headerWrap .navigation .navigation__ul .navigation__cart {
+        grid-column: 6/7;
+        grid-row: 1/2;
+        justify-self: center; }
 
 /*# sourceMappingURL=Style.css.map */
