--- a/style/Style.scss
+++ b/style/Style.scss
@@ -1,15 +1,79 @@
 html {
     font-size: 16px;
 }
-
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Source+Serif+Pro&display=swap');
 
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    max-width: 1440px;
+    ul, li {
+        list-style: none;
+    }
+    font-family: 'Roboto', sans-serif;
 }
 
 div {
     border: 1px solid cadetblue;
+}
+
+.header {
+    .headerWrap{
+        width: 83.3%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-rows: 4.3rem;
+        grid-template-columns: 2fr 1fr 3fr;
+        justify-content: space-around;
+        align-content: center;
+        align-items: center;
+        .logo {
+            grid-row: 1/2;
+            grid-column: 1/2;
+            width: 7rem;
+            height: 1.8rem;
+            background-image: url('../img/Logo_header.svg');
+            background-size: contain;
+        }
+        .empty {
+            grid-row: 1/2;
+            grid-column: 2/3;
+        }
+        .navigation {
+            grid-row: 1/2;
+            grid-column: 3/4;
+            .navigation__ul {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.4fr;
+                grid-template-rows: 1fr;
+                justify-content: space-around;
+                .navigation__presets {
+                    grid-column: 1/2;
+                    grid-row: 1/2;
+                }
+                .navigation__prints {
+                    grid-column: 2/3;
+                    grid-row: 1/2;
+                }
+                .navigation__store {
+                    grid-column: 3/4;
+                    grid-row: 1/2;
+                }
+                .navigation__about {
+                    grid-column: 4/5;
+                    grid-row: 1/2;
+                }
+                .navigation__contact {
+                    grid-column: 5/6;
+                    grid-row: 1/2;
+                }
+                .navigation__cart {
+                    grid-column: 6/7;
+                    grid-row: 1/2;
+                    justify-self: center;
+                }
+            }
+        }
+    }
 }
