--- a/style/Style.css
+++ b/style/Style.css
@@ -14,51 +14,131 @@ body {
 div {
   border: 1px solid cadetblue; }
 
-.header .headerWrap {
-  width: 83.3%;
-  margin: 0 auto;
+.globalWrap {
   display: grid;
-  grid-template-rows: 4.3rem;
-  grid-template-columns: 2fr 1fr 3fr;
-  justify-content: space-around;
-  align-content: center;
-  align-items: center; }
-  .header .headerWrap .logo {
-    grid-row: 1/2;
-    grid-column: 1/2;
-    width: 7rem;
-    height: 1.8rem;
-    background-image: url("../img/Logo_header.svg");
-    background-size: contain; }
-  .header .headerWrap .empty {
-    grid-row: 1/2;
-    grid-column: 2/3; }
-  .header .headerWrap .navigation {
-    grid-row: 1/2;
-    grid-column: 3/4; }
-    .header .headerWrap .navigation .navigation__ul {
+  grid-template-columns: 1fr 83.3% 1fr;
+  grid-template-rows: auto auto auto; }
+
+.header {
+  grid-column: 2/3;
+  grid-row: 1/2; }
+  .header .headerWrap {
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows: 4.3rem;
+    grid-template-columns: 2fr 1fr 3fr;
+    justify-content: space-around;
+    align-content: center;
+    align-items: center;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.05); }
+    .header .headerWrap .logo {
+      grid-row: 1/2;
+      grid-column: 1/2;
+      width: 7rem;
+      height: 1.8rem;
+      background-image: url("../img/Logo_header.svg");
+      background-size: contain; }
+    .header .headerWrap .navigation {
+      grid-row: 1/2;
+      grid-column: 3/4; }
+      .header .headerWrap .navigation .navigation__ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.4fr;
+        grid-template-rows: 1fr;
+        justify-content: space-around;
+        align-items: center;
+        font-size: 1rem; }
+        .header .headerWrap .navigation .navigation__ul a:link, .header .headerWrap .navigation .navigation__ul a:active, .header .headerWrap .navigation .navigation__ul a:focus, .header .headerWrap .navigation .navigation__ul a:visited {
+          text-decoration: none;
+          color: #3A5F56; }
+        .header .headerWrap .navigation .navigation__ul a:hover {
+          text-decoration: underline;
+          color: #3A5F56; }
+        .header .headerWrap .navigation .navigation__ul .navigation__presets {
+          grid-column: 1/2;
+          grid-row: 1/2; }
+        .header .headerWrap .navigation .navigation__ul .navigation__prints {
+          grid-column: 2/3;
+          grid-row: 1/2; }
+        .header .headerWrap .navigation .navigation__ul .navigation__store {
+          grid-column: 3/4;
+          grid-row: 1/2; }
+        .header .headerWrap .navigation .navigation__ul .navigation__about {
+          grid-column: 4/5;
+          grid-row: 1/2; }
+        .header .headerWrap .navigation .navigation__ul .navigation__contact {
+          grid-column: 5/6;
+          grid-row: 1/2; }
+        .header .headerWrap .navigation .navigation__ul .navigation__cart {
+          grid-column: 6/7;
+          grid-row: 1/2;
+          justify-self: center;
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: center;
+          align-items: center;
+          width: 7.6rem;
+          height: 2.7rem;
+          border-radius: 6px;
+          background-color: #3A5F56; }
+          .header .headerWrap .navigation .navigation__ul .navigation__cart a {
+            color: #FFFFFF; }
+          .header .headerWrap .navigation .navigation__ul .navigation__cart .cart__href::before {
+            content: "";
+            display: inline-block;
+            background-image: url("../img/basket.svg");
+            width: 1rem;
+            height: 1rem;
+            background-size: cover;
+            margin-right: 0.4rem; }
+          .header .headerWrap .navigation .navigation__ul .navigation__cart .navigation__cart_count {
+            margin-left: 0.3rem;
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: center;
+            align-items: center;
+            width: 1.2rem;
+            height: 1.1rem;
+            border-radius: 0.6rem;
+            font-size: 0.6rem;
+            background-color: #FFFFFF; }
+
+.main {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 60.8rem 3fr 3fr 1fr; }
+  .main .intro {
+    display: grid;
+    grid-template-columns: 1fr 1fr; }
+    .main .intro .introLeft {
+      grid-column: 1/2;
+      grid-row: 1/2;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.4fr;
-      grid-template-rows: 1fr;
-      justify-content: space-around; }
-      .header .headerWrap .navigation .navigation__ul .navigation__presets {
+      grid-template-columns: 1fr;
+      grid-template-rows: 4fr 2fr 2fr 1fr 4fr; }
+      .main .intro .introLeft .introLeft__h1 {
         grid-column: 1/2;
-        grid-row: 1/2; }
-      .header .headerWrap .navigation .navigation__ul .navigation__prints {
-        grid-column: 2/3;
-        grid-row: 1/2; }
-      .header .headerWrap .navigation .navigation__ul .navigation__store {
-        grid-column: 3/4;
-        grid-row: 1/2; }
-      .header .headerWrap .navigation .navigation__ul .navigation__about {
-        grid-column: 4/5;
-        grid-row: 1/2; }
-      .header .headerWrap .navigation .navigation__ul .navigation__contact {
-        grid-column: 5/6;
-        grid-row: 1/2; }
-      .header .headerWrap .navigation .navigation__ul .navigation__cart {
-        grid-column: 6/7;
-        grid-row: 1/2;
-        justify-self: center; }
+        grid-row: 2/3; }
+      .main .intro .introLeft .introLeft__p {
+        grid-column: 1/2;
+        grid-row: 3/4; }
+      .main .intro .introLeft .introLeft__a {
+        grid-column: 1/2;
+        grid-row: 4/5; }
+    .main .intro .introRight {
+      grid-column: 2/3;
+      grid-row: 1/2;
+      width: 100%;
+      height: 100%;
+      background-image: url("../img/James.jpg");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center; }
+
+.footer {
+  grid-column: 2/3;
+  grid-row: 3/4; }
 
 /*# sourceMappingURL=Style.css.map */
