--- a/style/Style.css
+++ b/style/Style.css
@@ -6,7 +6,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  max-width: 1440px;
   font-family: 'Roboto', sans-serif; }
   body ul, body li {
     list-style: none; }
@@ -15,22 +14,23 @@ div {
   border: 1px solid cadetblue; }
 
 .globalWrap {
+  max-width: 1440px;
+  height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 83.3% 1fr;
-  grid-template-rows: auto auto auto; }
+  grid-template-columns: 1fr 75rem 1fr;
+  grid-template-rows: 4.3rem 227.5rem 48.6rem;
+  justify-content: center; }
 
 .header {
   grid-column: 2/3;
   grid-row: 1/2; }
   .header .headerWrap {
-    margin: 0 auto;
     display: grid;
-    grid-template-rows: 4.3rem;
-    grid-template-columns: 2fr 1fr 3fr;
-    justify-content: space-around;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1.4fr;
+    justify-content: space-between;
     align-content: center;
-    align-items: center;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.05); }
+    align-items: center; }
     .header .headerWrap .logo {
       grid-row: 1/2;
       grid-column: 1/2;
@@ -40,7 +40,7 @@ div {
       background-size: contain; }
     .header .headerWrap .navigation {
       grid-row: 1/2;
-      grid-column: 3/4; }
+      grid-column: 2/3; }
       .header .headerWrap .navigation .navigation__ul {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.4fr;
@@ -104,41 +104,86 @@ div {
             background-color: #FFFFFF; }
 
 .main {
-  grid-column: 2/3;
-  grid-row: 2/3;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 60.8rem 3fr 3fr 1fr; }
+  grid-column: 1/4;
+  grid-row: 2/3; }
   .main .intro {
-    display: grid;
-    grid-template-columns: 1fr 1fr; }
-    .main .intro .introLeft {
-      grid-column: 1/2;
-      grid-row: 1/2;
+    background-color: #F4F3F0; }
+    .main .intro .introWrap {
+      width: 75rem;
+      margin: 0 auto;
       display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 4fr 2fr 2fr 1fr 4fr; }
-      .main .intro .introLeft .introLeft__h1 {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto; }
+      .main .intro .introWrap .introLeft {
         grid-column: 1/2;
-        grid-row: 2/3; }
-      .main .intro .introLeft .introLeft__p {
-        grid-column: 1/2;
-        grid-row: 3/4; }
-      .main .intro .introLeft .introLeft__a {
-        grid-column: 1/2;
-        grid-row: 4/5; }
-    .main .intro .introRight {
-      grid-column: 2/3;
-      grid-row: 1/2;
-      width: 100%;
-      height: 100%;
-      background-image: url("../img/James.jpg");
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center; }
+        grid-row: 1/2;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 4fr 2fr 2fr 1fr 4fr; }
+        .main .intro .introWrap .introLeft .introLeft__h1 {
+          grid-column: 1/2;
+          grid-row: 2/3; }
+        .main .intro .introWrap .introLeft .introLeft__p {
+          grid-column: 1/2;
+          grid-row: 3/4; }
+        .main .intro .introWrap .introLeft .introLeft__a {
+          grid-column: 1/2;
+          grid-row: 4/5; }
+      .main .intro .introWrap .introRight {
+        grid-column: 2/3;
+        grid-row: 1/2;
+        width: 100%;
+        height: 100%;
+        background-image: url("../img/James.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center; }
+  .main .services {
+    background-color: chocolate; }
+    .main .services .servicesWrap {
+      width: 75rem;
+      margin: 0 auto;
+      background-color: bisque;
+      display: grid;
+      grid-template-rows: auto auto;
+      grid-template-columns: auto auto auto;
+      justify-content: center; }
+      .main .services .servicesWrap .servicesIntroWrap {
+        width: 37rem;
+        grid-row: 1/2;
+        grid-column: 1/4;
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto;
+        justify-content: start; }
+        .main .services .servicesWrap .servicesIntroWrap .servicesIntroWrap__wave {
+          grid-column: 1/2;
+          grid-row: 1/2;
+          display: inline-block;
+          height: 1.2rem;
+          background-image: url("../img/wawe.svg");
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center; }
+        .main .services .servicesWrap .servicesIntroWrap .servicesIntroWrap__h3 {
+          grid-column: 1/2;
+          grid-row: 2/3;
+          font-family: 'Source Serif Pro', serif;
+          font-size: 2rem;
+          line-height: 0.4rem;
+          text-align: center; }
+        .main .services .servicesWrap .servicesIntroWrap .servicesIntroWrap__p {
+          grid-column: 1/2;
+          grid-row: 3/4;
+          font-family: 'Roboto', sans-serif;
+          font-size: 1rem; }
+      .main .services .servicesWrap .servicesGridWrap {
+        grid-row: 2/3;
+        grid-column: 1/4;
+        background-color: cadetblue; }
 
 .footer {
-  grid-column: 2/3;
+  grid-column: 1/4;
   grid-row: 3/4; }
 
 /*# sourceMappingURL=Style.css.map */
