--- a/style/Style.scss
+++ b/style/Style.scss
@@ -7,33 +7,32 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    max-width: 1440px;
     ul, li {
         list-style: none;
     }
     font-family: 'Roboto', sans-serif;
 }
-
 div {
     border: 1px solid cadetblue;
 }
 .globalWrap {
+    max-width: 1440px;
+    height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 83.3% 1fr;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 75rem 1fr;
+    grid-template-rows: 4.3rem 227.5rem 48.6rem;
+    justify-content: center;
 }
 .header {
     grid-column: 2/3;
     grid-row: 1/2;
     .headerWrap{
-        margin: 0 auto;
         display: grid;
-        grid-template-rows: 4.3rem;
-        grid-template-columns: 2fr 1fr 3fr;
-        justify-content: space-around;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 1.4fr;
+        justify-content: space-between;
         align-content: center;
         align-items: center;
-        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.05);
         .logo {
             grid-row: 1/2;
             grid-column: 1/2;
@@ -44,7 +43,7 @@ div {
         }
         .navigation {
             grid-row: 1/2;
-            grid-column: 3/4;
+            grid-column: 2/3;
             .navigation__ul {
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.4fr;
@@ -122,46 +121,101 @@ div {
     }
 }
 .main {
-    grid-column: 2/3;
+    grid-column: 1/4;
     grid-row: 2/3;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 60.8rem 3fr 3fr 1fr;
     .intro {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        .introLeft {
-            grid-column: 1/2;
-            grid-row: 1/2;
+        background-color: #F4F3F0;
+        .introWrap {
+            width: 75rem;
+            margin: 0 auto;
             display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 4fr 2fr 2fr 1fr 4fr;
-            .introLeft__h1 {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto;
+            .introLeft {
                 grid-column: 1/2;
-                grid-row: 2/3;
+                grid-row: 1/2;
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 4fr 2fr 2fr 1fr 4fr;
+                .introLeft__h1 {
+                    grid-column: 1/2;
+                    grid-row: 2/3;
+                }
+                .introLeft__p {
+                    grid-column: 1/2;
+                    grid-row: 3/4;
+                }
+                .introLeft__a {
+                    grid-column: 1/2;
+                    grid-row: 4/5;
+                }
             }
-            .introLeft__p {
-                grid-column: 1/2;
-                grid-row: 3/4;
+            .introRight {
+                grid-column: 2/3;
+                grid-row: 1/2;
+                width: 100%; //34.5rem;
+                height: 100%; //48.3rem;
+                background-image: url('../img/James.png');
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center;
             }
-            .introLeft__a {
-                grid-column: 1/2;
-                grid-row: 4/5;
-            }
-        }
-        .introRight {
-            grid-column: 2/3;
-            grid-row: 1/2;
-            width: 100%; //34.5rem;
-            height: 100%; //48.3rem;
-            background-image: url('../img/James.jpg');
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
         }
     }
+    .services {
+        background-color: chocolate;
+        .servicesWrap {
+            width: 75rem;
+            margin: 0 auto;
+            background-color: bisque;
+            display: grid;
+            grid-template-rows: auto auto;
+            grid-template-columns: auto auto auto;
+            justify-content: center;
+            .servicesIntroWrap {
+                width: 37rem;
+                grid-row: 1/2;
+                grid-column: 1/4;
+                display: grid;
+                grid-template-columns: auto;
+                grid-template-rows: auto auto auto;
+                justify-content: start;
+                .servicesIntroWrap__wave {
+                    grid-column: 1/2;
+                    grid-row: 1/2;
+                    display: inline-block;
+                    height: 1.2rem;
+                    background-image: url('../img/wawe.svg');
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
+                .servicesIntroWrap__h3 {
+                    grid-column: 1/2;
+                    grid-row: 2/3;
+                    font-family: 'Source Serif Pro', serif;
+                    font-size: 2rem;
+                    line-height: 0.4rem;
+                    text-align: center;
+                }
+                .servicesIntroWrap__p {
+                    grid-column: 1/2;
+                    grid-row: 3/4;
+                    font-family: 'Roboto', sans-serif;
+                    font-size: 1rem;
+    
+                }
+            }
+            .servicesGridWrap {
+                grid-row: 2/3;
+                grid-column: 1/4;
+                background-color: cadetblue;
+            }
+        }
+    }
+   
 }
 .footer {
-    grid-column: 2/3;
+    grid-column: 1/4;
     grid-row: 3/4;
 }
