--- a/style/Style.css
+++ b/style/Style.css
@@ -9,6 +9,9 @@ body {
   font-family: 'Roboto', sans-serif; }
   body ul, body li {
     list-style: none; }
+  body a:link, body a:active, body a:focus, body a:visited {
+    text-decoration: none;
+    color: #3A5F56; }
 
 div {
   border: 1px solid cadetblue; }
@@ -48,9 +51,6 @@ div {
         justify-content: space-around;
         align-items: center;
         font-size: 1rem; }
-        .header .headerWrap .navigation .navigation__ul a:link, .header .headerWrap .navigation .navigation__ul a:active, .header .headerWrap .navigation .navigation__ul a:focus, .header .headerWrap .navigation .navigation__ul a:visited {
-          text-decoration: none;
-          color: #3A5F56; }
         .header .headerWrap .navigation .navigation__ul a:hover {
           text-decoration: underline;
           color: #3A5F56; }
@@ -122,13 +122,34 @@ div {
         grid-template-rows: 4fr 2fr 2fr 1fr 4fr; }
         .main .intro .introWrap .introLeft .introLeft__h1 {
           grid-column: 1/2;
-          grid-row: 2/3; }
+          grid-row: 2/3;
+          font-family: 'Source Serif Pro', serif;
+          font-size: 3rem;
+          line-height: 3.5rem;
+          color: #3A5F56; }
         .main .intro .introWrap .introLeft .introLeft__p {
           grid-column: 1/2;
-          grid-row: 3/4; }
+          grid-row: 3/4;
+          font-family: 'Roboto', sans-serif;
+          font-size: 1rem;
+          line-height: 1.4rem;
+          color: #292C32; }
         .main .intro .introWrap .introLeft .introLeft__a {
           grid-column: 1/2;
-          grid-row: 4/5; }
+          grid-row: 4/5;
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: center;
+          align-items: center;
+          width: 7.3rem;
+          height: 2.7rem;
+          border-radius: 6px;
+          background-color: #3A5F56; }
+          .main .intro .introWrap .introLeft .introLeft__a a:link, .main .intro .introWrap .introLeft .introLeft__a a:active, .main .intro .introWrap .introLeft .introLeft__a a:focus, .main .intro .introWrap .introLeft .introLeft__a a:visited {
+            text-decoration: none;
+            color: #FFFFFF; }
+          .main .intro .introWrap .introLeft .introLeft__a a:hover {
+            text-decoration: underline; }
       .main .intro .introWrap .introRight {
         grid-column: 2/3;
         grid-row: 1/2;
@@ -180,7 +201,33 @@ div {
       .main .services .servicesWrap .servicesGridWrap {
         grid-row: 2/3;
         grid-column: 1/4;
-        background-color: cadetblue; }
+        background-color: cadetblue;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        justify-content: space-around;
+        align-content: space-around; }
+        .main .services .servicesWrap .servicesGridWrap .servicesGridWrap__div1 {
+          grid-column: 1/2;
+          grid-row: 1/2; }
+        .main .services .servicesWrap .servicesGridWrap .servicesGridWrap__div2 {
+          grid-column: 2/3;
+          grid-row: 1/2; }
+        .main .services .servicesWrap .servicesGridWrap .servicesGridWrap__div3 {
+          grid-column: 3/4;
+          grid-row: 1/2; }
+        .main .services .servicesWrap .servicesGridWrap .servicesGridWrap__div4 {
+          grid-column: 1/2;
+          grid-row: 2/3; }
+        .main .services .servicesWrap .servicesGridWrap .servicesGridWrap__div5 {
+          grid-column: 2/3;
+          grid-row: 2/3; }
+        .main .services .servicesWrap .servicesGridWrap .servicesGridWrap__div6 {
+          grid-column: 3/4;
+          grid-row: 2/3; }
+        .main .services .servicesWrap .servicesGridWrap .servicesGridWrap__div7 {
+          grid-column: 1/2;
+          grid-row: 3/4; }
 
 .footer {
   grid-column: 1/4;
