--- a/style/Style.scss
+++ b/style/Style.scss
@@ -11,6 +11,10 @@ body {
         list-style: none;
     }
     font-family: 'Roboto', sans-serif;
+    a:link, a:active, a:focus, a:visited {
+        text-decoration: none;
+        color:#3A5F56;
+    }
 }
 div {
     border: 1px solid cadetblue;
@@ -51,10 +55,6 @@ div {
                 justify-content: space-around;
                 align-items: center;
                 font-size: 1rem;
-                a:link, a:active, a:focus, a:visited {
-                    text-decoration: none;
-                    color:#3A5F56;
-                }
                 a:hover {
                     text-decoration: underline;
                     color:#3A5F56;
@@ -140,14 +140,37 @@ div {
                 .introLeft__h1 {
                     grid-column: 1/2;
                     grid-row: 2/3;
+                    font-family: 'Source Serif Pro', serif;
+                    font-size: 3rem;
+                    line-height: 3.5rem;
+                    color: #3A5F56;
                 }
                 .introLeft__p {
                     grid-column: 1/2;
                     grid-row: 3/4;
+                    font-family: 'Roboto', sans-serif;
+                    font-size: 1rem;
+                    line-height: 1.4rem;
+                    color: #292C32;
                 }
                 .introLeft__a {
                     grid-column: 1/2;
                     grid-row: 4/5;
+                    display: flex;
+                    flex-flow: row nowrap;
+                    justify-content: center;
+                    align-items: center;
+                    width: 7.3rem;
+                    height: 2.7rem;
+                    border-radius: 6px;
+                    background-color: #3A5F56;
+                    a:link, a:active, a:focus, a:visited {
+                        text-decoration: none;
+                        color: #FFFFFF;
+                    }
+                    a:hover {
+                        text-decoration: underline;
+                    }
                 }
             }
             .introRight {
@@ -210,6 +233,39 @@ div {
                 grid-row: 2/3;
                 grid-column: 1/4;
                 background-color: cadetblue;
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-rows: 1fr 1fr 1fr;
+                justify-content: space-around;
+                align-content: space-around;
+                .servicesGridWrap__div1 {
+                    grid-column: 1/2;
+                    grid-row: 1/2;
+                }
+                .servicesGridWrap__div2 {
+                    grid-column: 2/3;
+                    grid-row: 1/2;
+                }
+                .servicesGridWrap__div3 {
+                    grid-column: 3/4;
+                    grid-row: 1/2;
+                }
+                .servicesGridWrap__div4 {
+                    grid-column: 1/2;
+                    grid-row: 2/3;
+                }
+                .servicesGridWrap__div5 {
+                    grid-column: 2/3;
+                    grid-row: 2/3;
+                }
+                .servicesGridWrap__div6 {
+                    grid-column: 3/4;
+                    grid-row: 2/3;
+                }
+                .servicesGridWrap__div7 {
+                    grid-column: 1/2;
+                    grid-row: 3/4;
+                }
             }
         }
     }
