--- a/style/Style.scss
+++ b/style/Style.scss
@@ -24,7 +24,7 @@ div {
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 75rem 1fr;
-    grid-template-rows: 4.3rem 227.5rem 48.6rem;
+    grid-template-rows: auto auto auto;
     justify-content: center;
 }
 .header {
@@ -188,21 +188,20 @@ div {
     .services {
         background-color: chocolate;
         .servicesWrap {
-            width: 75rem;
+            max-width: 75rem;
             margin: 0 auto;
             background-color: bisque;
             display: grid;
-            grid-template-rows: auto auto;
-            grid-template-columns: auto auto auto;
-            justify-content: center;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr 4fr;
             .servicesIntroWrap {
-                width: 37rem;
-                grid-row: 1/2;
                 grid-column: 1/4;
+                grid-row: 1/2;
+                width: 37rem;
+                margin: 0 auto;
                 display: grid;
-                grid-template-columns: auto;
+                grid-template-columns: 1fr;
                 grid-template-rows: auto auto auto;
-                justify-content: start;
                 .servicesIntroWrap__wave {
                     grid-column: 1/2;
                     grid-row: 1/2;
@@ -226,21 +225,61 @@ div {
                     grid-row: 3/4;
                     font-family: 'Roboto', sans-serif;
                     font-size: 1rem;
-    
                 }
             }
             .servicesGridWrap {
                 grid-row: 2/3;
                 grid-column: 1/4;
-                background-color: cadetblue;
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
                 grid-template-rows: 1fr 1fr 1fr;
                 justify-content: space-around;
                 align-content: space-around;
+                gap: 1rem;
+                .s_cell {
+                    width: 23.6rem;
+                    height: 19rem;
+                    border-radius: 1rem;
+                    background-color: #F4F3F0;
+                    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.03);
+                }
+                .s_cell_img {
+                    display: inline-block;
+                    height: 3rem;
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
+                .s_cell_h4 {
+                    font-family: 'Source Serif Pro', serif;
+                    font-size: 1.5rem;
+                    line-height: 1.8rem;
+                }
+                .p_cell_p {
+                    font-family: 'Roboto', sans-serif;
+                    font-size: 1rem;
+                    line-height: 1.4;
+                }
+                .s_cell_btn {
+                    ///
+                    .s_cell_btn_a::after {
+                       content: "";
+                       display: inline-block;
+                       background-image: url('../img/arrow_a.svg');
+                       width: 1.2rem;
+                       height: 0.6rem;
+                       background-size: cover;
+                       margin-right: 0.4rem; 
+
+                    }
+                }
+               
                 .servicesGridWrap__div1 {
                     grid-column: 1/2;
                     grid-row: 1/2;
+                .s_cell_img {
+                    background-image: url('../img/s_01.svg');
+                }
                 }
                 .servicesGridWrap__div2 {
                     grid-column: 2/3;
