--- a/style/Style.scss
+++ b/style/Style.scss
@@ -490,4 +490,59 @@ div {
 .footer {
     grid-column: 1/4;
     grid-row: 3/4;
+    .footerGridWrap {
+        margin: 0 auto;
+        max-width: 73rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 2fr 5fr 1fr;
+        .footerLogoWrap {
+            grid-column: 1/2;
+            grid-row: 1/2;
+            justify-self: center;
+            .footerLogoWrap_span {
+                grid-row: 1/2;
+                grid-column: 1/2;
+                width: 7rem;
+                height: 1.8rem;
+                background-image: url('../img/Logo_header.svg');
+                background-size: contain;
+            }
+        }
+        .footerColumnWrap {
+            grid-column: 1/2;
+            grid-row: 2/3;
+            display: grid;
+            grid-template-columns: 1fr 1.5fr 1fr 2.5fr;
+            grid-template-rows: 1fr 1.5fr;
+            .pages {
+                grid-column: 1/2;
+                grid-row: 1/2;
+            }
+            .presetPacks {
+                grid-column: 2/3;
+                grid-row: 1/2;
+            }
+            .utilityPages {
+                grid-column: 3/4;
+                grid-row: 1/2;
+            }
+            .newsetter {
+                grid-column: 4/5;
+                grid-row: 1/2;
+            }
+            .storeCategories {
+                grid-column: 1/2;
+                grid-row: 2/3;
+            }
+            .businesAreas {
+                grid-column: 2/3;
+                grid-row: 2/3;
+            }
+        }
+        .footerInfo {
+            grid-column: 1/2;
+            grid-row: 3/4;
+        }
+    }
 }
