--- a/style/Style.scss
+++ b/style/Style.scss
@@ -7,6 +7,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    max-width: 1440px;
     ul, li {
         list-style: none;
     }
@@ -19,23 +20,16 @@ body {
 div {
     border: 1px solid cadetblue;
 }
-.globalWrap {
-    max-width: 1440px;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 75rem 1fr;
-    grid-template-rows: auto auto auto;
-    justify-content: center;
-}
+
 .header {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    .headerWrap{
+    background-color: #FFFFFF;
+    .headerWrap {
+        max-width: 75rem;
+        margin: 0 auto;
         display: grid;
-        grid-template-rows: 1fr;
-        grid-template-columns: 1fr 1.4fr;
-        justify-content: space-between;
-        align-content: center;
+        grid-template-rows: 4.37rem;
+        grid-template-columns: 1fr 0.5fr 1.5fr;
+        justify-content: space-evenly;
         align-items: center;
         .logo {
             grid-row: 1/2;
@@ -44,99 +38,98 @@ div {
             height: 1.8rem;
             background-image: url('../img/Logo_header.svg');
             background-size: contain;
+            background-repeat: no-repeat;
         }
-        .navigation {
+        .navigation__ul {
             grid-row: 1/2;
-            grid-column: 2/3;
-            .navigation__ul {
-                display: grid;
-                grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.4fr;
-                grid-template-rows: 1fr;
-                justify-content: space-around;
+            grid-column: 3/4;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1.4fr;
+            grid-template-rows: 1fr;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 1rem;
+            a:hover {
+                text-decoration: underline;
+                color:#3A5F56;
+            }
+            .navigation__presets {
+                grid-column: 1/2;
+                grid-row: 1/2;
+            }
+            .navigation__prints {
+                grid-column: 2/3;
+                grid-row: 1/2;
+            }
+            .navigation__store {
+                grid-column: 3/4;
+                grid-row: 1/2;
+            }
+            .navigation__about {
+                grid-column: 4/5;
+                grid-row: 1/2;
+            }
+            .navigation__contact {
+                grid-column: 5/6;
+                grid-row: 1/2;
+            }
+            .navigation__cart {
+                grid-column: 6/7;
+                grid-row: 1/2;
+                justify-self: center;
+                display: flex;
+                flex-flow: row nowrap;
+                justify-content: center;
                 align-items: center;
-                font-size: 1rem;
-                a:hover {
-                    text-decoration: underline;
-                    color:#3A5F56;
+                width: 7.6rem;
+                height: 2.7rem;
+                border-radius: 6px;
+                background-color: #3A5F56;
+                a {
+                    color: #FFFFFF;
                 }
-                .navigation__presets {
-                    grid-column: 1/2;
-                    grid-row: 1/2;
+                .cart__href::before {
+                    content: "";
+                    display: inline-block;
+                    background-image: url('../img/basket.svg');
+                    width: 1rem;
+                    height: 1rem;
+                    background-size: cover;
+                    margin-right: 0.4rem;
                 }
-                .navigation__prints {
-                    grid-column: 2/3;
-                    grid-row: 1/2;
-                }
-                .navigation__store {
-                    grid-column: 3/4;
-                    grid-row: 1/2;
-                }
-                .navigation__about {
-                    grid-column: 4/5;
-                    grid-row: 1/2;
-                }
-                .navigation__contact {
-                    grid-column: 5/6;
-                    grid-row: 1/2;
-                }
-                .navigation__cart {
-                    grid-column: 6/7;
-                    grid-row: 1/2;
-                    justify-self: center;
-                    display: flex;
-                    flex-flow: row nowrap;
-                    justify-content: center;
-                    align-items: center;
-                    width: 7.6rem;
-                    height: 2.7rem;
-                    border-radius: 6px;
-                    background-color: #3A5F56;
-                    a {
-                        color: #FFFFFF;
-                    }
-                    .cart__href::before {
-                        content: "";
-                        display: inline-block;
-                        background-image: url('../img/basket.svg');
-                        width: 1rem;
-                        height: 1rem;
-                        background-size: cover;
-                        margin-right: 0.4rem;
-                    }
-                    .navigation__cart_count {
-                    margin-left: 0.3rem;
-                    display: flex;
-                    flex-flow: row nowrap;
-                    justify-content: center;
-                    align-items: center;
-                    width: 1.2rem;
-                    height: 1.1rem;
-                    border-radius: 0.6rem;
-                    font-size: 0.6rem;
-                    background-color: #FFFFFF;
-                    }
+                .navigation__cart_count {
+                margin-left: 0.3rem;
+                display: flex;
+                flex-flow: row nowrap;
+                justify-content: center;
+                align-items: center;
+                width: 1.2rem;
+                height: 1.1rem;
+                border-radius: 0.6rem;
+                font-size: 0.6rem;
+                background-color: #FFFFFF;
                 }
             }
         }
     }
 }
+
 .main {
-    grid-column: 1/4;
-    grid-row: 2/3;
     .intro {
         background-color: #F4F3F0;
+        height: 60.8rem;
         .introWrap {
-            width: 75rem;
+            max-width: 75rem;
             margin: 0 auto;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: auto;
+            grid-template-rows: 6.25rem 48.3rem 6.25rem;
             .introLeft {
                 grid-column: 1/2;
-                grid-row: 1/2;
+                grid-row: 2/3;
                 display: grid;
                 grid-template-columns: 1fr;
-                grid-template-rows: 4fr 2fr 2fr 1fr 4fr;
+                grid-template-rows: 4fr 1.5fr 2fr 1fr 4fr;
                 .introLeft__h1 {
                     grid-column: 1/2;
                     grid-row: 2/3;
@@ -164,6 +157,7 @@ div {
                     height: 2.7rem;
                     border-radius: 6px;
                     background-color: #3A5F56;
+                    ////////
                     a:link, a:active, a:focus, a:visited {
                         text-decoration: none;
                         color: #FFFFFF;
@@ -171,11 +165,12 @@ div {
                     a:hover {
                         text-decoration: underline;
                     }
+                    //////
                 }
             }
             .introRight {
                 grid-column: 2/3;
-                grid-row: 1/2;
+                grid-row: 2/3;
                 width: 100%; //34.5rem;
                 height: 100%; //48.3rem;
                 background-image: url('../img/James.png');
@@ -186,23 +181,27 @@ div {
         }
     }
     .services {
+        background-color: bisque;
         .servicesWrap {
             max-width: 75rem;
             margin: 0 auto;
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 1fr 4fr;
+            grid-template-columns: 1fr;
+            grid-template-rows: 6rem 10rem 59rem 6rem;
+            justify-content: space-between;
+            align-items: center;
+            gap: 1rem;
             .servicesIntroWrap {
-                grid-column: 1/4;
-                grid-row: 1/2;
+                grid-column: 1/2;
+                grid-row: 2/3;
                 width: 37rem;
                 margin: 0 auto;
                 display: grid;
                 grid-template-columns: 1fr;
-                grid-template-rows: 0.5fr auto auto auto;
+                grid-template-rows: auto auto auto;
                 .servicesIntroWrap__wave {
                     grid-column: 1/2;
-                    grid-row: 2/3;
+                    grid-row: 1/2;
                     display: inline-block;
                     height: 1.2rem;
                     background-image: url('../img/wawe.svg');
@@ -212,7 +211,7 @@ div {
                 }
                 .servicesIntroWrap__h3 {
                     grid-column: 1/2;
-                    grid-row: 3/4;
+                    grid-row: 2/3;
                     font-family: 'Source Serif Pro', serif;
                     font-size: 2rem;
                     line-height: 0.4rem;
@@ -220,26 +219,28 @@ div {
                 }
                 .servicesIntroWrap__p {
                     grid-column: 1/2;
-                    grid-row: 4/5;
+                    grid-row: 3/4;
                     font-family: 'Roboto', sans-serif;
                     font-size: 1rem;
                 }
             }
             .servicesGridWrap {
-                grid-row: 2/3;
-                grid-column: 1/4;
+                grid-column: 1/2;
+                grid-row: 3/4;
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
                 grid-template-rows: 1fr 1fr 1fr;
-                justify-content: space-around;
-                align-content: space-around;
-                gap: 1rem;
+                justify-content: center;
+                align-content: center;
+                gap: 8px;
                 .s_cell {
-                    width: 23.6rem;
-                    height: 19rem;
+                    max-width: 23.7rem;
+                    max-height: 19rem;
                     border-radius: 1rem;
                     background-color: #F4F3F0;
                     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.03);
+                    justify-self: center;
+                    padding: 1.9rem;
                 }
                 .s_cell_img {
                     display: inline-block;
@@ -325,6 +326,7 @@ div {
         }
     }
     .preset {
+        background-color: aquamarine;
         .presetWrap{
             max-width: 75rem;
             margin: 0 auto;
@@ -449,7 +451,6 @@ div {
     .contact {
         .contactWrap {
         max-width: 50rem;
-        max-height: 16.2rem;
         margin: 0 auto;
         display: grid;
         grid-template-columns: 3fr 1fr;
@@ -488,11 +489,11 @@ div {
    
 }
 .footer {
-    grid-column: 1/4;
-    grid-row: 3/4;
+    background-color: #292C32;
+    color: #FFFFFF;
     .footerGridWrap {
         margin: 0 auto;
-        max-width: 73rem;
+        max-width: 75rem;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 2fr 5fr 1fr;
@@ -543,6 +544,56 @@ div {
         .footerInfo {
             grid-column: 1/2;
             grid-row: 3/4;
+            display: grid;
+            grid-template-columns: 7fr 2fr 3fr;
+            grid-template-rows: 1fr;
+            justify-content: center;
+            align-items: center;
+
+            .rights {
+                grid-column: 1/2;
+                grid-row: 1/2;
+            }
+            .social {
+                grid-column: 3/4;
+                grid-row: 1/2;
+                .linkedin a {
+                    display: inline-block;
+                    width: 24px;
+                    height: 24px;
+                    background-image: url('../img/linkedin.svg');
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-size: cover;
+                }
+                .facebook a {
+                    display: inline-block;
+                    width: 24px;
+                    height: 24px;
+                    background-image: url('../img/facebook.svg');
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-size: cover;
+                }
+                .instagram a {
+                    display: inline-block;
+                    width: 24px;
+                    height: 24px;
+                    background-image: url('../img/istagram.svg');
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-size: cover;
+                }
+                .twitter a {
+                    display: inline-block;
+                    width: 24px;
+                    height: 24px;
+                    background-image: url('../img/twitter.svg');
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-size: cover;
+                }
+            }
         }
     }
 }
